// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> closes the dialog 1`] = `
<body>
  <div
    aria-hidden="true"
  >
    <div>
      <button>
        Show Dialog
      </button>
    </div>
  </div>
  <reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          data-reach-dialog-overlay=""
        >
          <div
            aria-label="Announcement"
            aria-modal="true"
            data-reach-dialog-content=""
            role="dialog"
            tabindex="-1"
          >
            <div
              data-testid="inner"
            >
              <button>
                Close Dialog
              </button>
              <input
                data-testid="text"
                type="text"
              />
              <button
                data-testid="useless-button"
              >
                Ayyyyyy
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;

exports[`<Dialog /> closes the dialog 2`] = `
<body>
  <div>
    <div>
      <button>
        Show Dialog
      </button>
    </div>
  </div>
</body>
`;

exports[`<Dialog /> closes the dialog when overlay is clicked 1`] = `
<body>
  <div>
    <div>
      <button>
        Show Dialog
      </button>
    </div>
  </div>
</body>
`;

exports[`<Dialog /> does not render children when not open 1`] = `
<body>
  <div>
    <div
      data-testid="root"
    />
  </div>
</body>
`;
